--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
+    overflow-x: hidden;
+    max-width: 100vw;
 }
 
 header {
@@ -11,7 +13,7 @@ header {
     padding: 10px 80px;
     background: #fff;
     height: 60px;
-    width: 100%;
+    width: 100vw;
     box-sizing: border-box;
     z-index: 1050;
 }
@@ -61,7 +63,7 @@ header nav ul li a.active {
     font-size: 24px;
     cursor: pointer;
     display: none;
-    transition-duration: 1000ms
+    transition-duration: 200ms;
 }
 
 .header-img {
@@ -80,6 +82,7 @@ header nav ul li a.active {
     background-color: white;
     z-index: 1;
     min-height: 100vh;
+    max-width: 100vw;
 }
 
 .header_text {
@@ -162,14 +165,14 @@ header nav ul li a.active {
 
 footer{
   bottom: 0;
-  width: 100%;
+  width: 100vw;
   background-color: #262626;
   color: #fff; 
   padding: 20px 0;
+  text-align: center;
 }
 
 .footer_nav{
-    text-align: center;
     padding: 20px;
 }
 
@@ -205,7 +208,7 @@ footer{
     color: #333;
     font-family: 'Montserrat', sans-serif;
     height: 35vh;
-    padding: 30px 35px;
+    padding: 30px 55px;
 }
 
 .kaart1_omschrijving{
@@ -228,6 +231,121 @@ footer{
 .facebook_link{
     color: #fff;
     text-decoration: none;
+}
+
+.gridContainer{
+    background-color: #fff;
+    margin: 35px;
+    height: 60vh;
+    -webkit-box-shadow: -18px 10px 59px 7px rgba(191,191,191,1);
+    -moz-box-shadow: -18px 10px 59px 7px rgba(191,191,191,1);
+    box-shadow: -18px 10px 59px 7px rgba(191,191,191,1);
+
+    padding: 30px;
+    display: grid;
+    grid-template-columns: auto auto;
+}
+.input_1_wrapper{
+    padding: 10px;
+    box-shadow: 0 10px 30px 0px rgba(191,191,191,0.5);
+    box-sizing: border-box;
+    position: relative;
+    margin-bottom: 30px;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    width: 100%;
+}
+
+.input_1{
+    padding: 0 20px 0 23px;
+    font-family: 'Montserrat', sans-serif;
+    display: block;
+    background: transparent;
+    outline: none;
+    border: none;
+    width: 20vw;
+}
+
+.btn-submit{
+    color: #fff;
+    background: #29aae2;
+    padding: 15px 25px;
+    float: right;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+.omschrijving{
+    max-width: 40vw;
+    text-align: justify;
+    font-family: 'Montserrat', sans-serif;
+
+}
+
+.contactMe{
+    font-size: 20px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.contact_img{
+    text-align: center;
+}
+
+.contact_img > img{
+    width: 20vw;
+}
+
+.header_trainingen{
+    width: 20vw;
+    padding: 15px;
+    font-size: 25px;
+}
+
+.training_kaart1{
+    background: #29aae2;
+    display: grid;
+    grid-template-columns: auto auto;
+    color: #fff;
+    height: 30vh;
+    padding: 35px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.training_kaart2{
+    display: grid;
+    grid-template-columns: auto auto;
+    background: rgb(223, 223, 223);
+    height: 30vh;
+    padding: 35px;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.conditie_omschrijving{
+    max-width: 40vw;
+    margin: auto;
+    font-size: 18px;
+}
+
+.kracht_omschrijving{
+    max-width: 40vw;
+    margin: auto;
+    font-size: 18px;
+}
+
+.center{
+    text-align: center;
+    margin: auto;
 }
 
 @media (max-width: 767px) {
@@ -310,13 +428,79 @@ footer{
 
     .prijs_kaart1{
         display: inline-block;
+        height: 100%;
     }
 
     .prijs_kaart2{
         display: inline-block;
+        height: 100%;
     }
     
     .empty_space{
         min-width: 0;
+    }
+
+    .footer_nav{
+        font-size: 12px;
+    }
+
+    .omschrijving{
+        max-width: 80vw;
+    }
+
+    .input_1{
+        width: 40vw;
+    }
+    
+    .input_1_wrapper{
+        max-width: 80vw;
+    }
+
+    .gridContainer{
+        display: inline-block;
+        width: 100vw;
+        min-height: 100vh;
+        margin: 50px 0;
+    }
+
+    .contact_img{
+        display: none;
+    }
+
+    .btn-submit{
+        float: left;
+    }
+    
+    .training_kaart1{
+        grid-template-columns: auto;
+        grid-template-rows: auto auto;
+        width: 100vw;
+        padding: 0;
+        margin: 0;
+        height: 100%;
+    }
+
+    .training_kaart2{
+        grid-template-columns: auto;
+        grid-template-rows: auto auto;
+        width: 100vw;
+        padding: 0;
+        margin: 0;
+        height: 100%;
+    }
+
+    .header_trainingen{
+        width: 200px;
+    }
+
+    .conditie_omschrijving_p .kracht_omschrijving_p{
+        width: 100vw;
+    }
+
+    .conditie_omschrijving .kracht_omschrijving{
+        padding: 0;
+        margin: 0;
+        width: 100vw;
+        text-align: center;
     }
 }
